[package]
name = "hyperliquid_rust_sdk"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.9"
ethers = {version = "2.0.14", features = ["eip712", "abigen"]}
futures-util = "0.3.17"
hex = "0.4"
http = "0.2"
lazy_static = "1.4.0"
log = "0.4"
rand = "0.8.5"
reqwest = "0.11.18"
serde = {version = "1.0.175", features = ["derive"]}
serde_json = "1.0.103"
rmp-serde = "1.0.0"
thiserror = "1.0.44"
tokio = {version = "1.21", features = ["full"]}
tokio-tungstenite = { version = "0.17", features = [
  "rustls-tls-webpki-roots",
  "connect",
] }
uuid = {version = "1.6.1", features = ["v4"]}
